--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -31,8 +31,8 @@
     <ClInclude Include="src\core\LapTimer.h" />
     <ClInclude Include="src\core\Race.h" />
     <ClInclude Include="src\core\RaceState.h" />
-    <ClInclude Include="src\core\ShipCollisionDetector.h" />
-    <ClInclude Include="src\core\ShipCollisionResult.h" />
+    <ClInclude Include="src\core\cm\ShipCollisionDetector.h" />
+    <ClInclude Include="src\core\cm\ShipCollisionResult.h" />
     <ClInclude Include="src\core\StartingGridInitializer.h" />
     <ClInclude Include="src\core\TrackManager.h" />
     <ClInclude Include="src\core\WeaponLogic.h" />
@@ -123,14 +123,14 @@
     <ClInclude Include="src\calc\Quaternion.h" />
     <ClInclude Include="src\calc\Sphere.h" />
     <ClInclude Include="src\core\LapChecker.h" />
-    <ClInclude Include="src\core\TrackCollisionResult.h" />
+    <ClInclude Include="src\core\cm\TrackCollisionResult.h" />
     <ClInclude Include="src\model\track\RoadTrack4.h" />
     <ClInclude Include="src\model\ShipCentralLine.h" />
     <ClInclude Include="src\model\VelocityFunction.h" />
     <ClInclude Include="src\gl\opengl.h" />
     <ClInclude Include="src\calc\LineIntersector.h" />
     <ClInclude Include="src\core\BorderUpdater.h" />
-    <ClInclude Include="src\core\CollisionProcessor.h" />
+    <ClInclude Include="src\core\cm\CollisionProcessor.h" />
     <ClInclude Include="src\core\ShipController.h" />
     <ClInclude Include="src\game\Game.h" />
     <ClInclude Include="src\core\Camera.h" />
@@ -138,7 +138,7 @@
     <ClInclude Include="src\core\RaceUpdater.h" />
     <ClInclude Include="src\core\MoveLogic.h" />
     <ClInclude Include="src\core\PositionCorrector.h" />
-    <ClInclude Include="src\core\TrackCollisionDetector.h" />
+    <ClInclude Include="src\core\cm\TrackCollisionDetector.h" />
     <ClInclude Include="src\core\TurnAngleCalculator.h" />
     <ClInclude Include="src\core\VelocityCalculator.h" />
     <ClInclude Include="src\core\PositionUpdater.h" />
@@ -189,20 +189,20 @@
     <ClCompile Include="src\calc\Quaternion.cpp" />
     <ClCompile Include="src\calc\Sphere.cpp" />
     <ClCompile Include="src\core\BorderUpdater.cpp" />
-    <ClCompile Include="src\core\CollisionProcessor.cpp" />
+    <ClCompile Include="src\core\cm\CollisionProcessor.cpp" />
     <ClCompile Include="src\core\Laps.cpp" />
     <ClCompile Include="src\core\LapTimer.cpp" />
     <ClCompile Include="src\core\Race.cpp" />
-    <ClCompile Include="src\core\ShipCollisionDetector.cpp" />
-    <ClCompile Include="src\core\ShipCollisionResult.cpp" />
+    <ClCompile Include="src\core\cm\ShipCollisionDetector.cpp" />
+    <ClCompile Include="src\core\cm\ShipCollisionResult.cpp" />
     <ClCompile Include="src\core\ShipController.cpp" />
     <ClCompile Include="src\core\StartingGridInitializer.cpp" />
     <ClCompile Include="src\core\WeaponLogic.cpp" />
     <ClCompile Include="src\game\Game.cpp" />
     <ClCompile Include="src\core\Camera.cpp" />
     <ClCompile Include="src\core\LapChecker.cpp" />
-    <ClCompile Include="src\core\TrackCollisionDetector.cpp" />
-    <ClCompile Include="src\core\TrackCollisionResult.cpp" />
+    <ClCompile Include="src\core\cm\TrackCollisionDetector.cpp" />
+    <ClCompile Include="src\core\cm\TrackCollisionResult.cpp" />
     <ClCompile Include="src\core\TrackManager.cpp" />
     <ClCompile Include="src\game\ScreenNavigator.cpp" />
     <ClCompile Include="src\gl\Face.cpp" />
