--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -35,15 +35,15 @@
     <ClInclude Include="src\core\BorderUpdater.h" />
     <ClInclude Include="src\model\Border.h" />
     <ClInclude Include="src\calc\LineIntersector.h" />
-    <ClInclude Include="src\core\CollisionProcessor.h" />
-    <ClInclude Include="src\core\TrackCollisionDetector.h" />
+    <ClInclude Include="src\core\cm\CollisionProcessor.h" />
+    <ClInclude Include="src\core\cm\TrackCollisionDetector.h" />
     <ClInclude Include="src\render\common\ShipMesh.h" />
     <ClInclude Include="src\anx\TrackBuilder.h" />
     <ClInclude Include="src\model\track\RoadTrack1.h" />
     <ClInclude Include="src\model\ShipMeasure.h" />
     <ClInclude Include="src\calc\Quaternion.h" />
     <ClInclude Include="src\calc\Plane.h" />
-    <ClInclude Include="src\core\TrackCollisionResult.h" />
+    <ClInclude Include="src\core\cm\TrackCollisionResult.h" />
     <ClInclude Include="src\model\track\RoadTrack4.h" />
     <ClInclude Include="src\model\ShipCentralLine.h" />
     <ClInclude Include="src\model\VelocityFunction.h" />
@@ -147,8 +147,8 @@
     <ClInclude Include="src\lib\IArray.h" />
     <ClInclude Include="src\gl\SimpleMeshRenderer.h" />
     <ClInclude Include="src\gl\VBOMeshRenderer.h" />
-    <ClInclude Include="src\core\ShipCollisionDetector.h" />
-    <ClInclude Include="src\core\ShipCollisionResult.h" />
+    <ClInclude Include="src\core\cm\ShipCollisionDetector.h" />
+    <ClInclude Include="src\core\cm\ShipCollisionResult.h" />
     <ClInclude Include="src\model\ShipAIData.h" />
     <ClInclude Include="src\core\StartingGridInitializer.h" />
     <ClInclude Include="src\model\Bullet.h" />
@@ -187,8 +187,8 @@
     <ClCompile Include="src\core\Camera.cpp" />
     <ClCompile Include="src\core\BorderUpdater.cpp" />
     <ClCompile Include="src\calc\LineIntersector.cpp" />
-    <ClCompile Include="src\core\CollisionProcessor.cpp" />
-    <ClCompile Include="src\core\TrackCollisionDetector.cpp" />
+    <ClCompile Include="src\core\cm\CollisionProcessor.cpp" />
+    <ClCompile Include="src\core\cm\TrackCollisionDetector.cpp" />
     <ClCompile Include="src\render\common\ShipMesh.cpp" />
     <ClCompile Include="src\gl\opengl.cpp" />
     <ClCompile Include="src\anx\TrackBuilder.cpp" />
@@ -196,7 +196,7 @@
     <ClCompile Include="src\model\Border.cpp" />
     <ClCompile Include="src\calc\Quaternion.cpp" />
     <ClCompile Include="src\calc\Plane.cpp" />
-    <ClCompile Include="src\core\TrackCollisionResult.cpp" />
+    <ClCompile Include="src\core\cm\TrackCollisionResult.cpp" />
     <ClCompile Include="src\model\track\RoadTrack4.cpp" />
     <ClCompile Include="src\model\VelocityFunction.cpp" />
     <ClCompile Include="src\core\PositionUpdater.cpp" />
@@ -286,8 +286,8 @@
     <ClCompile Include="src\ai\EnemyAI.cpp" />
     <ClCompile Include="src\gl\SimpleMeshRenderer.cpp" />
     <ClCompile Include="src\gl\VBOMeshRenderer.cpp" />
-    <ClCompile Include="src\core\ShipCollisionDetector.cpp" />
-    <ClCompile Include="src\core\ShipCollisionResult.cpp" />
+    <ClCompile Include="src\core\cm\ShipCollisionDetector.cpp" />
+    <ClCompile Include="src\core\cm\ShipCollisionResult.cpp" />
     <ClCompile Include="src\model\ShipAIData.cpp" />
     <ClCompile Include="src\model\ShipCentralLine.cpp" />
     <ClCompile Include="src\core\StartingGridInitializer.cpp" />
