--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -35,7 +35,7 @@
     <ClInclude Include="src\core\BorderUpdater.h" />
     <ClInclude Include="src\model\Border.h" />
     <ClInclude Include="src\calc\LineIntersector.h" />
-    <ClInclude Include="src\core\cm\CollisionProcessor.h" />
+    <ClInclude Include="src\core\cm\TrackCollisionProcessor.h" />
     <ClInclude Include="src\core\cm\TrackCollisionDetector.h" />
     <ClInclude Include="src\render\common\ShipMesh.h" />
     <ClInclude Include="src\anx\TrackBuilder.h" />
@@ -156,6 +156,7 @@
     <ClInclude Include="src\model\Machinegun.h" />
     <ClInclude Include="src\core\WeaponLogic.h" />
     <ClInclude Include="src\render\common\BulletsRenderer.h" />
+    <ClInclude Include="src\core\cm\ShipCollisionProcessor.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -187,7 +188,7 @@
     <ClCompile Include="src\core\Camera.cpp" />
     <ClCompile Include="src\core\BorderUpdater.cpp" />
     <ClCompile Include="src\calc\LineIntersector.cpp" />
-    <ClCompile Include="src\core\cm\CollisionProcessor.cpp" />
+    <ClCompile Include="src\core\cm\TrackCollisionProcessor.cpp" />
     <ClCompile Include="src\core\cm\TrackCollisionDetector.cpp" />
     <ClCompile Include="src\render\common\ShipMesh.cpp" />
     <ClCompile Include="src\gl\opengl.cpp" />
@@ -296,6 +297,7 @@
     <ClCompile Include="src\model\Machinegun.cpp" />
     <ClCompile Include="src\core\WeaponLogic.cpp" />
     <ClCompile Include="src\render\common\BulletsRenderer.cpp" />
+    <ClCompile Include="src\core\cm\ShipCollisionProcessor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
