--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -73,14 +73,14 @@
     <ClInclude Include="src\model\Weapon.h" />
     <ClInclude Include="src\render\common\BackgroundSphere.h" />
     <ClInclude Include="src\render\common\BulletsRenderer.h" />
-    <ClInclude Include="src\render\common\CompleteLapsTimeListRenderer.h" />
-    <ClInclude Include="src\render\common\CompleteLapTimeRenderer.h" />
+    <ClInclude Include="src\render\dash\CompleteLapsTimeListRenderer.h" />
+    <ClInclude Include="src\render\dash\CompleteLapTimeRenderer.h" />
     <ClInclude Include="src\render\common\CountdownRenderer.h" />
-    <ClInclude Include="src\render\common\DashboardRenderer.h" />
+    <ClInclude Include="src\render\dash\DashboardRenderer.h" />
     <ClInclude Include="src\render\common\FinishTextRenderer.h" />
     <ClInclude Include="src\render\common\GoRenderer.h" />
-    <ClInclude Include="src\render\common\LapsCountRenderer.h" />
-    <ClInclude Include="src\render\common\LapTimeRenderer.h" />
+    <ClInclude Include="src\render\dash\LapsCountRenderer.h" />
+    <ClInclude Include="src\render\dash\LapTimeRenderer.h" />
     <ClInclude Include="src\render\common\MenuBackgroundRenderer.h" />
     <ClInclude Include="src\gl\TextRenderer.h" />
     <ClInclude Include="src\render\common\EnemyShipsHealthRenderer.h" />
@@ -252,14 +252,14 @@
     <ClCompile Include="src\model\Weapon.cpp" />
     <ClCompile Include="src\render\common\BackgroundSphere.cpp" />
     <ClCompile Include="src\render\common\BulletsRenderer.cpp" />
-    <ClCompile Include="src\render\common\CompleteLapsTimeListRenderer.cpp" />
-    <ClCompile Include="src\render\common\CompleteLapTimeRenderer.cpp" />
+    <ClCompile Include="src\render\dash\CompleteLapsTimeListRenderer.cpp" />
+    <ClCompile Include="src\render\dash\CompleteLapTimeRenderer.cpp" />
     <ClCompile Include="src\render\common\CountdownRenderer.cpp" />
-    <ClCompile Include="src\render\common\DashboardRenderer.cpp" />
+    <ClCompile Include="src\render\dash\DashboardRenderer.cpp" />
     <ClCompile Include="src\render\common\FinishTextRenderer.cpp" />
     <ClCompile Include="src\render\common\GoRenderer.cpp" />
-    <ClCompile Include="src\render\common\LapsCountRenderer.cpp" />
-    <ClCompile Include="src\render\common\LapTimeRenderer.cpp" />
+    <ClCompile Include="src\render\dash\LapsCountRenderer.cpp" />
+    <ClCompile Include="src\render\dash\LapTimeRenderer.cpp" />
     <ClCompile Include="src\render\common\MenuBackgroundRenderer.cpp" />
     <ClCompile Include="src\gl\TextRenderer.cpp" />
     <ClCompile Include="src\render\common\EnemyShipsHealthRenderer.cpp" />
