--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -125,13 +125,13 @@
     <ClInclude Include="src\gl\TextRenderer.h" />
     <ClInclude Include="src\core\LapTimer.h" />
     <ClInclude Include="src\core\Laps.h" />
-    <ClInclude Include="src\render\common\DashboardRenderer.h" />
-    <ClInclude Include="src\render\common\LapTimeRenderer.h" />
-    <ClInclude Include="src\render\common\LapsCountRenderer.h" />
+    <ClInclude Include="src\render\dash\DashboardRenderer.h" />
+    <ClInclude Include="src\render\dash\LapTimeRenderer.h" />
+    <ClInclude Include="src\render\dash\LapsCountRenderer.h" />
     <ClInclude Include="src\render\common\CountdownRenderer.h" />
     <ClInclude Include="src\render\common\GoRenderer.h" />
-    <ClInclude Include="src\render\common\CompleteLapTimeRenderer.h" />
-    <ClInclude Include="src\render\common\CompleteLapsTimeListRenderer.h" />
+    <ClInclude Include="src\render\dash\CompleteLapTimeRenderer.h" />
+    <ClInclude Include="src\render\dash\CompleteLapsTimeListRenderer.h" />
     <ClInclude Include="src\ui\MenuItemSelector.h" />
     <ClInclude Include="src\ui\GridMenuItemSelector.h" />
     <ClInclude Include="src\render\common\TrackThumbnailRenderer.h" />
@@ -274,13 +274,13 @@
     <ClCompile Include="src\gl\TextRenderer.cpp" />
     <ClCompile Include="src\core\LapTimer.cpp" />
     <ClCompile Include="src\core\Laps.cpp" />
-    <ClCompile Include="src\render\common\DashboardRenderer.cpp" />
-    <ClCompile Include="src\render\common\LapTimeRenderer.cpp" />
-    <ClCompile Include="src\render\common\LapsCountRenderer.cpp" />
+    <ClCompile Include="src\render\dash\DashboardRenderer.cpp" />
+    <ClCompile Include="src\render\dash\LapTimeRenderer.cpp" />
+    <ClCompile Include="src\render\dash\LapsCountRenderer.cpp" />
     <ClCompile Include="src\render\common\CountdownRenderer.cpp" />
     <ClCompile Include="src\render\common\GoRenderer.cpp" />
-    <ClCompile Include="src\render\common\CompleteLapTimeRenderer.cpp" />
-    <ClCompile Include="src\render\common\CompleteLapsTimeListRenderer.cpp" />
+    <ClCompile Include="src\render\dash\CompleteLapTimeRenderer.cpp" />
+    <ClCompile Include="src\render\dash\CompleteLapsTimeListRenderer.cpp" />
     <ClCompile Include="src\render\common\TrackThumbnailRenderer.cpp" />
     <ClCompile Include="src\render\common\TrackThumbnailGridRenderer.cpp" />
     <ClCompile Include="src\render\common\FinishTextRenderer.cpp" />
