--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -162,6 +162,7 @@
     <ClInclude Include="src\core\cm\BulletCollisionResult.h" />
     <ClInclude Include="src\core\cm\BulletCollisionProcessor.h" />
     <ClInclude Include="src\core\ShipStateLogic.h" />
+    <ClInclude Include="src\render\dash\PlayerShipHealthRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -308,6 +309,7 @@
     <ClCompile Include="src\core\cm\BulletCollisionDetector.cpp" />
     <ClCompile Include="src\core\cm\BulletCollisionProcessor.cpp" />
     <ClCompile Include="src\core\ShipStateLogic.cpp" />
+    <ClCompile Include="src\render\dash\PlayerShipHealthRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
