--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -42,7 +42,9 @@
     <ClInclude Include="src\core\TrackManager.h" />
     <ClInclude Include="src\core\WeaponLogic.h" />
     <ClInclude Include="src\game\ScreenNavigator.h" />
+    <ClInclude Include="src\gl\AnimatedTexturedRect.h" />
     <ClInclude Include="src\gl\Face.h" />
+    <ClInclude Include="src\gl\FramedTexture.h" />
     <ClInclude Include="src\gl\ImageFile.h" />
     <ClInclude Include="src\gl\Mesh.h" />
     <ClInclude Include="src\gl\MeshLoader.h" />
@@ -217,7 +219,9 @@
     <ClCompile Include="src\core\cm\TrackCollisionResult.cpp" />
     <ClCompile Include="src\core\TrackManager.cpp" />
     <ClCompile Include="src\game\ScreenNavigator.cpp" />
+    <ClCompile Include="src\gl\AnimatedTexturedRect.cpp" />
     <ClCompile Include="src\gl\Face.cpp" />
+    <ClCompile Include="src\gl\FramedTexture.cpp" />
     <ClCompile Include="src\gl\ImageFile.cpp" />
     <ClCompile Include="src\gl\Mesh.cpp" />
     <ClCompile Include="src\gl\MeshLoader.cpp" />
