--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -165,6 +165,7 @@
     <ClInclude Include="src\render\dash\PlayerShipHealthRenderer.h" />
     <ClInclude Include="src\gl\AnimatedTexturedRect.h" />
     <ClInclude Include="src\gl\FramedTexture.h" />
+    <ClInclude Include="src\render\common\ExplosionRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -314,6 +315,7 @@
     <ClCompile Include="src\render\dash\PlayerShipHealthRenderer.cpp" />
     <ClCompile Include="src\gl\AnimatedTexturedRect.cpp" />
     <ClCompile Include="src\gl\FramedTexture.cpp" />
+    <ClCompile Include="src\render\common\ExplosionRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
