--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -72,6 +72,7 @@
     <ClInclude Include="src\model\Bullet.h" />
     <ClInclude Include="src\model\Machinegun.h" />
     <ClInclude Include="src\model\ShipAIData.h" />
+    <ClInclude Include="src\model\ShipControls.h" />
     <ClInclude Include="src\model\Weapon.h" />
     <ClInclude Include="src\render\common\BackgroundSphere.h" />
     <ClInclude Include="src\render\common\BulletsRenderer.h" />
@@ -248,6 +249,7 @@
     <ClCompile Include="src\model\Machinegun.cpp" />
     <ClCompile Include="src\model\ShipAIData.cpp" />
     <ClCompile Include="src\model\ShipCentralLine.cpp" />
+    <ClCompile Include="src\model\ShipControls.cpp" />
     <ClCompile Include="src\model\track\RoadTrack4.cpp" />
     <ClCompile Include="src\model\VelocityFunction.cpp" />
     <ClCompile Include="src\core\PositionUpdater.cpp" />
