--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -79,6 +79,7 @@
     <ClInclude Include="src\render\common\BackgroundSphere.h" />
     <ClInclude Include="src\render\common\BulletsRenderer.h" />
     <ClInclude Include="src\render\common\ExplosionRenderer.h" />
+    <ClInclude Include="src\render\common\PowerUpRenderer.h" />
     <ClInclude Include="src\render\dash\BulletsCountRenderer.h" />
     <ClInclude Include="src\render\dash\CompleteLapsTimeListRenderer.h" />
     <ClInclude Include="src\render\dash\CompleteLapTimeRenderer.h" />
@@ -266,6 +267,7 @@
     <ClCompile Include="src\render\common\BackgroundSphere.cpp" />
     <ClCompile Include="src\render\common\BulletsRenderer.cpp" />
     <ClCompile Include="src\render\common\ExplosionRenderer.cpp" />
+    <ClCompile Include="src\render\common\PowerUpRenderer.cpp" />
     <ClCompile Include="src\render\dash\BulletsCountRenderer.cpp" />
     <ClCompile Include="src\render\dash\CompleteLapsTimeListRenderer.cpp" />
     <ClCompile Include="src\render\dash\CompleteLapTimeRenderer.cpp" />
