--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -170,6 +170,7 @@
     <ClInclude Include="src\render\dash\BulletsCountRenderer.h" />
     <ClInclude Include="src\model\PowerUp.h" />
     <ClInclude Include="src\core\PowerUpGenerator.h" />
+    <ClInclude Include="src\render\common\PowerUpRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -324,6 +325,7 @@
     <ClCompile Include="src\render\dash\BulletsCountRenderer.cpp" />
     <ClCompile Include="src\model\PowerUp.cpp" />
     <ClCompile Include="src\core\PowerUpGenerator.cpp" />
+    <ClCompile Include="src\render\common\PowerUpRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
