--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -96,6 +96,7 @@
     <ClInclude Include="src\render\common\EnemyShipsHealthRenderer.h" />
     <ClInclude Include="src\render\common\TrackThumbnailGridRenderer.h" />
     <ClInclude Include="src\render\common\TrackThumbnailRenderer.h" />
+    <ClInclude Include="src\render\dash\NitroCountRenderer.h" />
     <ClInclude Include="src\render\dash\PlayerShipHealthRenderer.h" />
     <ClInclude Include="src\render\debug\DebugBackgroundRenderer.h" />
     <ClInclude Include="src\render\common\StarsRenderer.h" />
@@ -284,6 +285,7 @@
     <ClCompile Include="src\render\common\EnemyShipsHealthRenderer.cpp" />
     <ClCompile Include="src\render\common\TrackThumbnailGridRenderer.cpp" />
     <ClCompile Include="src\render\common\TrackThumbnailRenderer.cpp" />
+    <ClCompile Include="src\render\dash\NitroCountRenderer.cpp" />
     <ClCompile Include="src\render\dash\PlayerShipHealthRenderer.cpp" />
     <ClCompile Include="src\render\debug\DebugBackgroundRenderer.cpp" />
     <ClCompile Include="src\render\common\BackgroundRenderer.cpp" />
