--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -172,6 +172,7 @@
     <ClInclude Include="src\core\cm\PowerUpCollisionProcessor.h" />
     <ClInclude Include="src\model\NitroCollection.h" />
     <ClInclude Include="src\core\NitroLogic.h" />
+    <ClInclude Include="src\render\dash\NitroCountRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -328,6 +329,7 @@
     <ClCompile Include="src\core\cm\PowerUpCollisionProcessor.cpp" />
     <ClCompile Include="src\model\NitroCollection.cpp" />
     <ClCompile Include="src\core\NitroLogic.cpp" />
+    <ClCompile Include="src\render\dash\NitroCountRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
