--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -176,6 +176,14 @@
     <ClInclude Include="src\lib\Dictionary.h" />
     <ClInclude Include="src\model\TrackPointInfo.h" />
     <ClInclude Include="src\ai\NitroActivationLogic.h" />
+    <ClInclude Include="src\lib\di\Binder.h" />
+    <ClInclude Include="src\lib\di\DependencyContainer.h" />
+    <ClInclude Include="src\lib\di\InjectModule.h" />
+    <ClInclude Include="src\lib\di\InstanceCollection.h" />
+    <ClInclude Include="src\lib\di\InstanceHolder.h" />
+    <ClInclude Include="src\lib\di\Resolver.h" />
+    <ClInclude Include="src\lib\di\ResolvingFactory.h" />
+    <ClInclude Include="src\lib\di\SingletonInstanceHolder.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -335,6 +343,7 @@
     <ClCompile Include="src\render\dash\NitroCountRenderer.cpp" />
     <ClCompile Include="src\model\TrackPointInfo.cpp" />
     <ClCompile Include="src\ai\NitroActivationLogic.cpp" />
+    <ClCompile Include="src\lib\di\InstanceCollection.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
