--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -46,6 +46,7 @@
     <ClInclude Include="src\core\WeaponLogic.h" />
     <ClInclude Include="src\game\AIInjectModule.h" />
     <ClInclude Include="src\game\CoreInjectModule.h" />
+    <ClInclude Include="src\game\GameFactory.h" />
     <ClInclude Include="src\game\ScreenNavigator.h" />
     <ClInclude Include="src\gl\AnimatedTexturedRect.h" />
     <ClInclude Include="src\gl\Face.h" />
@@ -243,6 +244,7 @@
     <ClCompile Include="src\core\LapChecker.cpp" />
     <ClCompile Include="src\core\cm\TrackCollisionDetector.cpp" />
     <ClCompile Include="src\core\TrackManager.cpp" />
+    <ClCompile Include="src\game\GameFactory.cpp" />
     <ClCompile Include="src\game\ScreenNavigator.cpp" />
     <ClCompile Include="src\gl\AnimatedTexturedRect.cpp" />
     <ClCompile Include="src\gl\Face.cpp" />
