--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -187,6 +187,7 @@
     <ClInclude Include="src\game\CoreInjectModule.h" />
     <ClInclude Include="src\game\AIInjectModule.h" />
     <ClInclude Include="src\game\GameFactory.h" />
+    <ClInclude Include="src\lib\di\DefaultInstanceHolder.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
